<resources>
    <string name="app_name">Idea-Archive-Android</string>
    <string name="typing_email">이메일을 입력해주세요</string>
    <string name="typing_password">비밀번호를 입력해주세요</string>
    <string name="forgot_password">비밀번호를 잊으셨나요?</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="login_logo">LOGIN</string>
    <string name="first_time_in_IA">IA가 처음이신가요?</string>
    <string name="sign_up">회원가입</string>
    <string name="login_btn">로그인</string>
    <string name="sign_up_logo">SIGN UP</string>
    <string name="input_name">이름을 입력해주세요</string>
    <string name="input_password_again">비밀번호를 한 번 더 입력해 주세요</string>
    <string name="check">확인</string>
    <string name="already_user_question">회원이신가요?</string>
    <string name="already_user_login">로그인 ></string>
    <string name="input_auth_code">인증번호를 입력해주세요</string>
    <string name="we_send_auth_code">입력하신 메일로 인증번호를 보냈어요!</string>
    <string name="go_back_to_login_page">로그인으로 돌아가기</string>
    <string name="authentication_success">인증성공!</string>
    <string name="success_to_email_authentication">이메일 인증에 성공하였습니다.</string>
    <string name="authentication_failed">인증실패</string>
    <string name="try_again">다시 시도해주세요.</string>
    <string name="if_you_forgot_password">비밀번호를 분실하셨다면,\n변경할 수 있어요!</string>
    <string name="you_can_change">변경할 수 있어요!</string>
    <string name="input_new_password">새 비밀번호를 입력해 주세요!</string>
    <string name="password_rule">특수문자 포함 8~16자로 작성해주세요</string>
    <string name="hint_input_new_password">새 비밀번호를 입력해 주세요</string>
    <string name="input_again">한 번 더 입력해 주세요</string>
    <string name="back">뒤로가기</string>
    <string name="my_page">MY</string>
    <string name="default_name">채종인</string>
    <string name="logout">로그아웃</string>
    <string name="edit_profile">프로필수정</string>
    <string name="liked_post">좋아한 글</string>
    <string name="my_post">작성한 글</string>
    <string name="divide"> ∙ </string>
    <string name="entire">전체</string>
    <string name="idea">아이디어</string>
    <string name="feedback">피드백</string>
    <string name="job_opening">구인</string>
    <string name="withdrawal">회원탈퇴</string>
    <string name="ask_withdrawal">회원탈퇴 하시겠습니까?\n탈퇴시 저장된 기록이 사라집니다.</string>
    <string name="do_withdrawal">탈퇴하기</string>
    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="new_password">새 비밀번호</string>
    <string name="input_password">기존 비밀번호를 입력해주세요</string>
    <string name="input_new_password_">새로운 비밀번호를 입력해주세요</string>
    <string name="need_password">회원탈퇴를 하려면\n비밀번호가 필요해요</string>
    <string name="incorrect_password">비밀번호가 일치하지 않습니다.</string>
    <string name="new_write">새 글 쓰기</string>
    <string name="what_category">어떤 글을 쓰시나요?</string>
    <string name="select_category">카테고리를 골라주세요!</string>
    <string name="what_major">원하시는 전공자가 있나요?</string>
    <string name="tag_major">원하시는 전공만 골라 태그하실 수 있어요!</string>
    <string name="write_title">  제목을 적어주세요.</string>
    <string name="write_content">  당신의 아이디어를 들려주세요!</string>
    <string name="number_of_characters">0/500  </string>
    <string name="detail_post">상세 보기</string>
    <string name="detail_category">#CATEGORY</string>
    <string name="sample_text">예시</string>
    <string name="example_name">이름</string>
    <string name="sample_timer">1분 전</string>
    <string name="sample_num">99+</string>
    <string name="share">공유</string>
    <string name="sample_num_of_comment">댓글 99+개</string>
    <string name="write_comment">댓글 쓰기...</string>
    <string name="sample_comment_userinfo">user_name  •  N분 전</string>
    <string name="sample_comment_content">Content</string>
</resources>