<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_layout_top_b"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0616"/>
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/g_layout_top_b">
        
        <ImageButton
            android:id="@+id/ibtn_back_button"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@drawable/ibtn_back_button"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"/>
        
        <TextView
            android:id="@+id/tv_back"
            android:layout_width="56dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:text="@string/back"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/pretendard_regular"
            android:textSize="15sp"/>
        
        <TextView
            android:id="@+id/tv_detail_post"
            android:layout_width="67dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:text="@string/detail_post"
            android:textSize="17dp"
            android:gravity="center"
            android:layout_marginLeft="67dp"
            android:fontFamily="@font/pretendard_medium"
            android:textColor="@color/black"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/g_layout_top_b">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_selected_category"
                android:layout_width="104dp"
                android:layout_height="18dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="@string/detail_category"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="232dp"
                android:background="@drawable/bg_see_more_ibtn" />

            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_width="350dp"
                android:layout_height="24dp"
                android:text="@string/sample_text"
                android:textSize="20sp"
                android:fontFamily="@font/pretendard_bold"
                android:textColor="@color/black"
                android:layout_marginTop="38dp"
                android:layout_marginStart="-358dp"/>

            <ImageView
                android:id="@+id/iv_profile_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/bg_default_profile"
                android:layout_marginTop="74dp"
                android:layout_marginStart="-352dp"/>
            
            <TextView
                android:id="@+id/tv_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:text="@string/example_name"
                android:textSize="14sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="64dp"/>
            
            <TextView
                android:id="@+id/tv_write_time"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:text="@string/sample_timer"
                android:layout_marginStart="265dp"
                android:layout_marginTop="66dp"/>
            
            <View
                android:layout_width="350dp"
                android:layout_height="1dp"
                android:background="@color/separation"
                android:layout_marginTop="110dp"
                android:layout_marginStart="-352dp"/>

            <TextView
                android:id="@+id/tv_detail_content"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/sample_text"
                android:textSize="16sp"
                android:fontFamily="@font/pretendard_medium"
                android:textColor="@color/black"
                android:layout_marginTop="120dp"
                android:layout_marginStart="-352dp"/>
            
            <TextView
                android:id="@+id/tv_selected_major"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/detail_category"
                android:textSize="14sp"
                android:fontFamily="@font/pretendard_medium"
                android:textColor="@color/gray"
                android:layout_marginTop="165dp"
                android:layout_marginStart="-352dp"/>

            <ImageButton
                android:id="@+id/ibtn_heart"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_empty_heart"
                android:layout_marginTop="210dp"
                android:layout_marginStart="-125dp"/>
            
            <TextView
                android:id="@+id/tv_heart_count"
                android:layout_width="29dp"
                android:layout_height="18dp"
                android:gravity="center"
                android:text="@string/sample_num"
                android:textColor="@color/gray"
                android:fontFamily="@font/pretendard_medium"
                android:layout_marginTop="200dp"/>
            
            <ImageButton
                android:id="@+id/ibtn_share"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/bg_share_btn"
                android:layout_marginTop="210dp"
                android:layout_marginStart="24dp"/>

            <TextView
                android:id="@+id/tv_share"
                android:layout_width="29dp"
                android:layout_height="18dp"
                android:gravity="center"
                android:text="@string/share"
                android:textColor="@color/gray"
                android:fontFamily="@font/pretendard_medium"
                android:layout_marginTop="200dp" />

            <View
                android:layout_width="350dp"
                android:layout_height="1dp"
                android:background="@color/separation"
                android:layout_marginTop="250dp"
                android:layout_marginStart="-352dp"/>
            
            <TextView
                android:id="@+id/tv_comment_count"
                android:layout_width="350dp"
                android:layout_height="18dp"
                android:textSize="15sp"
                android:fontFamily="@font/pretendard_medium"
                android:textColor="@color/black"
                android:text="@string/sample_num_of_comment"
                android:layout_marginTop="266dp"
                android:layout_marginStart="-352dp"/>
            
            <EditText
                android:id="@+id/et_write_comment"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/write_comment"
                android:textColorHint="@color/gray"
                android:textSize="16sp"
                android:layout_marginTop="298dp"
                android:layout_marginStart="-350dp"/>
            
            <ImageButton
                android:id="@+id/ibtn_send_comment"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/bg_comment_send_btn"
                android:layout_marginTop="305dp"
                android:layout_marginStart="-30dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>