<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="143dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/login_logo"
        android:textColor="@color/primary"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="243dp"
        android:background="@drawable/bg_edittext"
        android:fontFamily="@font/pretendard_regular"
        android:hint="@string/typing_email"
        android:paddingStart="16dp"
        android:textColorHint="@color/input_information_gray"
        android:textSize="14dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_passowrd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_edittext"
        android:fontFamily="@font/pretendard_regular"
        android:hint="@string/typing_password"
        android:paddingStart="16dp"
        android:textColorHint="@color/input_information_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email" />


    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="407dp"
        android:background="@drawable/btn_login"
        android:text="로그인"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="285dp"
        android:layout_marginTop="367dp"
        android:layout_marginRight="28dp"
        android:fontFamily="@font/pretendard_regular"
        android:text="@string/find_password"
        android:textColor="@color/input_information_gray"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibtn_google_lg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="113dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/lg_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ibtn_kakao_lg"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/ibtn_kakao_lg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/lg_kakaotalk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ibtn_github_lg"
        app:layout_constraintStart_toEndOf="@id/ibtn_google_lg" />

    <ImageButton
        android:id="@+id/ibtn_github_lg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="113dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/lg_github"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ibtn_kakao_lg" />


    <TextView
        android:id="@+id/tv_first_time_in_IA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="106dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/pretendard_regular"
        android:text="@string/first_time_in_IA"
        android:textColor="@color/first_time_in_ia"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/pretendard_regular"
        android:text="@string/sign_up"
        android:textColor="@color/sign_up_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_first_time_in_IA" />

</androidx.constraintlayout.widget.ConstraintLayout>