<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_btn_search_s"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7641" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_btn_search_e"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8256" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_btn_tab_bar_t"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0521" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_btn_tab_bar_b"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0806" />

    <TextView
        android:id="@+id/tv_entire_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/entire"
        android:textColor="@color/gray"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_idea"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/idea"
        android:textColor="@color/gray"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/g_btn_tab_bar_t"
        app:layout_constraintBottom_toBottomOf="@id/g_btn_tab_bar_b"/>

    <TextView
        android:id="@+id/tv_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/feedback"
        android:textColor="@color/gray"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_job_opening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="193dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/job_opening"
        android:textColor="@color/gray"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_search_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_search_button"
        app:layout_constraintBottom_toBottomOf="@id/g_btn_tab_bar_b"
        app:layout_constraintEnd_toEndOf="@id/g_btn_search_e"
        app:layout_constraintStart_toStartOf="@id/g_btn_search_s"
        app:layout_constraintTop_toTopOf="@id/g_btn_tab_bar_t" />

</androidx.constraintlayout.widget.ConstraintLayout>