<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_ibtn_back_t"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.0142" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_tv_back_t"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.0166" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_tv_need_password"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1469" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_ibtn_back_b"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.0474" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_tv_back_b"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.0450" />

        <ImageButton
            android:id="@+id/ibtn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="@drawable/ibtn_back_button"
            app:layout_constraintTop_toTopOf="@id/g_ibtn_back_t"
            app:layout_constraintBottom_toBottomOf="@id/g_ibtn_back_b"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/back"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/pretendard_regular"
            app:layout_constraintTop_toTopOf="@id/g_tv_back_t"
            app:layout_constraintBottom_toBottomOf="@id/g_tv_back_b"
            app:layout_constraintStart_toEndOf="@id/ibtn_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_page"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/pretendard_medium"
            app:layout_constraintTop_toTopOf="@id/g_tv_back_t"
            app:layout_constraintBottom_toBottomOf="@id/g_tv_back_b"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <TextView
            android:id="@+id/tv_need_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need_password"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="@font/pretendard_bold"
            app:layout_constraintTop_toBottomOf="@id/g_tv_need_password"
            app:layout_constraintStart_toStartOf="@id/et_password" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingStart="16dp"
            android:paddingVertical="15dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/typing_password"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/pretendard_regular"
            app:layout_constraintTop_toBottomOf="@id/tv_need_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_withdrawal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login"
            android:layout_marginTop="24dp"
            android:text="@string/check"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="@font/pretendard_semibold"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>